nginx-ingress-controller/test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - fruits.kube.local
      # This assumes tls-secret exists and the SSL 
      #       # certificate contains a CN for foo.bar.com
      secretName: tls-secret
  rules:
  - host: fruits.kube.local
    http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service
            servicePort: 5678
        - path: /banana
          backend:
            serviceName: banana-service
            servicePort: 5678
